Add Google site verification meta tag
Inserted a google-site-verification meta tag in the HTML head for site ownership verification purposes.

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description" content="Create LED matrix animations for Arduino Uno Q with this easy-to-use web app." />
     <meta name="keywords" content="Arduino, LED Matrix, Animation, Uno Q, LED Animator, Web App" />
+    <meta name="google-site-verification" content="Jde_Bf7NZoz2l9JDQ90xDmVEBw6FqvxRJvsXEGxtqOM" />
 </head>
 
 <body>
