Add export to Arduino .ino feature
Introduces a new 'Export .ino' button in the UI and implements the exportINO function to generate and download Arduino-compatible code for LED matrix animations.

--- a/index.html
+++ b/index.html
@@ -65,7 +65,8 @@
                     <button id="btnClear" class="btn btn-outline-secondary btn-sm">Clear</button>
                     <button id="btnInvert" class="btn btn-outline-secondary btn-sm">Invert</button>
                     <button id="btnFill" class="btn btn-outline-secondary btn-sm">Fill</button>
-                    <button id="btnCopy" class="btn btn-primary btn-sm">Copy Code</button>
+                    <button id="btnCopy" class="btn btn-outline-primary btn-sm">Copy Code</button>
+                    <button id="btnExportINO" class="btn btn-outline-success btn-sm">⬇ Export .ino</button>
                 </div>
             </div>
 
