--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     <meta charset="UTF-8" />
     <title>Arduino Uno Q LED Matrix Animator</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" />
+    <script async defer src="https://buttons.github.io/buttons.js"></script>
     <link rel="stylesheet" href="stylesheet.css" />
     <link rel="icon" type="image/svg+xml" href="img/icon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -32,6 +33,7 @@
         <div class="row py-4">
             <div class="col text-center">
                 <h2>Arduino Uno Q LED Matrix Animator</h2>
+                <a class="github-button" href="https://github.com/mstojke/UnoQLEDAnimator/" data-color-scheme="no-preference: light; light: light; dark: dark;" data-size="large" aria-label="View on GitHub">View on GitHub</a>
             </div>
         </div>
 
